--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,6 +17,57 @@
     padding-right: 0 !important;
   }
 
+.progress-bar-h, .progress-bar-v{
+      width: 300px;
+      height: 50px;
+      background: #CCC;
+      display: block;
+      word-wrap: unset;
+      overflow: hidden;
+      -webkit-transition: all 0.5s ease-out;
+      -o-transition: all 0.5s ease-out;
+      transition: all 0.5s ease-out;
+    }
+    .progress-bar-h .current, .progress-bar-v .current{
+      width: 80%;
+      height: 100%;
+      background: rgba(0, 204, 255, 1);
+      display: block;
+      float: left;
+      display: flex;
+      align-self: center;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+
+    }
+    .progress-bar-h .goal, .progress-bar-v .goal{
+        width: 20%;
+        height: 100%;
+        background: #BBB;
+        float: right;
+        display: flex;
+        align-self: center;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .progress-bar-v{
+      width: 50px;
+      height: 300px;
+    }
+    .progress-bar-v .current{
+      width: 100%;
+      height: 80%;
+
+
+    }
+    .progress-bar-v .goal{
+      height: 30%;
+      width: 100%;
+
+    }
 /*
 .bar-graph {
   padding: 0;
