--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -20,7 +20,7 @@
 .progress-bar-h, .progress-bar-v{
   width: 300px;
   height: 50px;
-  background: #CCC;
+  background: #BBB;
   display: block;
   word-wrap: unset;
   overflow: hidden;
@@ -43,7 +43,9 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-
+  -webkit-animation-delay: 0.1s;
+  -o-animation-delay: 0.1s;
+  animation-delay: 0.1s;
 }
 .progress-bar-h .goal, .progress-bar-v .goal{
   width: 20%;
@@ -55,7 +57,9 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-
+  -webkit-animation-delay: 1s;
+  -o-animation-delay: 1s;
+  animation-delay: 1s;
 }
 .progress-bar-v{
   width: 80%;
@@ -75,12 +79,153 @@
 .progress-bar-v .current{
   width: 100%;
   height: 80%;
+  -webkit-transform: scaleY(0);
+  -ms-transform: scaleY(0);
+  -o-transform: scaleY(0);
+  transform: scaleY(0);
 }
 .progress-bar-v .goal{
   height: 30%;
   width: 100%;
-
 }
+
+/*progress bar grow animate*/
+.grow-v-animation{
+  animation: animationGrowV ease-out .5s;
+  animation-iteration-count: 1;
+  transform-origin: 50% 100%;
+  animation-fill-mode:forwards; /*when the spec is finished*/
+  -webkit-animation: animationGrowV ease-out .5s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 50% 100%;
+  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
+  -moz-animation: animationGrowV ease-out .5s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 50% 100%;
+  -moz-animation-fill-mode:forwards; /*FF 5+*/
+  -o-animation: animationGrowV ease-out .5s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 50% 100%;
+  -o-animation-fill-mode:forwards; /*Not implemented yet*/
+  -ms-animation: animationGrowV ease-out .5s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 50% 100%;
+  -ms-animation-fill-mode:forwards; /*IE 10+*/
+}
+
+@keyframes animationGrowV{
+  0% {
+    transform:  scaleY(0.00) ;
+  }
+  100% {
+    transform:  scaleY(1.00) ;
+  }
+}
+
+@-moz-keyframes animationGrowV{
+  0% {
+    -moz-transform:  scaleY(0.00) ;
+  }
+  100% {
+    -moz-transform:  scaleY(1.00) ;
+  }
+}
+
+@-webkit-keyframes animationGrowV {
+  0% {
+    -webkit-transform:  scaleY(0.00) ;
+  }
+  100% {
+    -webkit-transform:  scaleY(1.00) ;
+  }
+}
+
+@-o-keyframes animationGrowV {
+  0% {
+    -o-transform:  scaleY(0.00) ;
+  }
+  100% {
+    -o-transform:  scaleY(1.00) ;
+  }
+}
+
+@-ms-keyframes animationGrowV {
+  0% {
+    -ms-transform:  scaleY(0.00) ;
+  }
+  100% {
+    -ms-transform:  scaleY(1.00) ;
+  }
+}
+
+.grow-h-animation{
+  animation: animationGrowH ease-out .5s;
+  animation-iteration-count: 1;
+  transform-origin: 0% 50%;
+  animation-fill-mode:forwards; /*when the spec is finished*/
+  -webkit-animation: animationGrowH ease-out .5s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 0% 50%;
+  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
+  -moz-animation: animationGrowH ease-out .5s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 0% 50%;
+  -moz-animation-fill-mode:forwards; /*FF 5+*/
+  -o-animation: animationGrowH ease-out .5s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 0% 50%;
+  -o-animation-fill-mode:forwards; /*Not implemented yet*/
+  -ms-animation: animationGrowH ease-out .5s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 0% 50%;
+  -ms-animation-fill-mode:forwards; /*IE 10+*/
+}
+
+@keyframes animationGrowH{
+  0% {
+    transform:  scaleX(0.00) ;
+  }
+  100% {
+    transform:  scaleX(1.00) ;
+  }
+}
+
+@-moz-keyframes animationGrowH{
+  0% {
+    -moz-transform:  scaleX(0.00) ;
+  }
+  100% {
+    -moz-transform:  scaleX(1.00) ;
+  }
+}
+
+@-webkit-keyframes animationGrowH {
+  0% {
+    -webkit-transform:  scaleX(0.00) ;
+  }
+  100% {
+    -webkit-transform:  scaleX(1.00) ;
+  }
+}
+
+@-o-keyframes animationGrowH {
+  0% {
+    -o-transform:  scaleX(0.00) ;
+  }
+  100% {
+    -o-transform:  scaleX(1.00) ;
+  }
+}
+
+@-ms-keyframes animationGrowH {
+  0% {
+    -ms-transform:  scaleX(0.00) ;
+  }
+  100% {
+    -ms-transform:  scaleX(1.00) ;
+  }
+}
+
 /*
 .bar-graph {
   padding: 0;
@@ -298,7 +443,7 @@ header{
     padding-right: 2rem;
   }
 }
-@media (min-width: 1200px){
+@media (min-width: 1600px){
   .container{
     max-width: 1400px;
   }
