--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -532,7 +532,7 @@ header{
     font-size: 12px;
 }
 
-.canvas-holder , .canvas-holder-division { 
+.canvas-holder-division { 
   width: 100px; 
   float: left;
 }
