Added transition to map

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -544,3 +544,10 @@ header{
 #division-name {
   margin-top: 15px;
 }
+
+.slidemap {
+  display:block;
+  width: 100%;
+  -webkit-transition: 0.75s; /* Safari */
+  transition: 0.75s;
+}
