--- a/public/scss/varriables.scss
+++ b/public/scss/varriables.scss
@@ -3,7 +3,20 @@
 $red: #f45e58;
 $darkRed: #cd4031;
 $primary-font : 'Roboto', sans-serif;
+
 html, body{
 	font-size: 16px;
 	font: $primary-font;
 }
+
+// site custom style
+.container{
+	@media(min-width: 1300px){
+		max-width: 1300px;
+	}
+}
+body{
+	 font-family: $primary-font;
+	 background: #eeeeee;
+}
+
