--- a/public/scss/output.scss
+++ b/public/scss/output.scss
@@ -39,3 +39,42 @@
 		}
 	}
 }
+.report-col{
+	.tab-col-title{
+		margin-bottom: 25px;
+	}
+}
+.report-list{
+	list-style: none;
+	padding: 0;
+	li{
+		display: block;
+		width: 100%;
+		overflow: hidden;
+		margin-bottom: 10px;
+	}
+	img {
+	}
+	a, a:hover{
+		text-decoration: none;
+	}
+	span.report-title {
+	    color: #008091;
+	    display: block;
+	    font-size: 12px;
+	    text-transform: uppercase;
+	    line-height: 16px;
+	}
+
+	span.date {
+	    display: block;
+	    color: #666666;
+	    font-size: 12px;
+	}
+
+	span.date {
+	    line-height: 16px;
+	}
+
+
+}
