--- a/public/scss/header.scss
+++ b/public/scss/header.scss
@@ -7,6 +7,10 @@
 		.navbar-brand{
 			margin-right: 32px;
 		}
+		.navbar-toggler, .navbar-toggler:focus{
+			border: none;
+			outline: none;
+		}
 		li {
 			@include media-breakpoint-up(lg) {
 				border-right: 1px solid $darkRed;
@@ -56,7 +60,7 @@
 				border: none;
 				padding: 0;
 				a{
-					border-top: 1px solid #cd4031;
+					border-bottom: 1px solid #cd4031;
 				}
 				.dropdown-item:hover, .dropdown-item:focus, .dropdown-item.active, .dropdown-item:active{
 					background: #fda69c;
