Added d3 curve to output maternal (w/o interpolation)

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -350,3 +350,12 @@ header{
 span.map-text {
   color: #f45e57;
 }
+
+/* d3 area chart */
+.axis path, .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.area { fill: #9fdfd0; }
