--- a/public/scss/swiper-tab.scss
+++ b/public/scss/swiper-tab.scss
@@ -37,6 +37,8 @@
     margin-bottom: 0;
 }
 
-.swiper-slide {
-    padding: 17px 15px;
-}
+.tab-content{
+	.swiper-slide {
+	    padding: 17px 15px;
+	}
+} 
