--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6747,7 +6747,9 @@ body {
   bottom: auto;
   background: #f45e58; }
   .header-full .navbar.navbar-red .navbar-brand {
-    margin-right: 32px; }
+    margin-right: 30px;
+    padding-left: 16px;
+    padding-top: 0px; }
   .header-full .navbar.navbar-red .navbar-toggler, .header-full .navbar.navbar-red .navbar-toggler:focus {
     border: none;
     outline: none; }
@@ -6780,8 +6782,10 @@ body {
     font-size: 1rem; }
     @media (min-width: 992px) {
       .header-full .navbar.navbar-red li a {
-        padding-top: 27px;
-        padding-bottom: 20px; } }
+        padding-top: 23px;
+        padding-bottom: 13px;
+        padding-left: 50px;
+        padding-right: 57px; } }
   .header-full .navbar.navbar-red li .dropdown-menu {
     background: #f45d57;
     border-radius: 0;
@@ -7021,20 +7025,21 @@ body {
   font-weight: normal;
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
-  padding: 0px 10px;
-  line-height: 30px;
+  padding: 0px 12px;
+  line-height: 27px;
   margin-left: -15px; }
 
 .view-on-map {
   background: #AAAAAA;
-  padding: 0 10px;
+  padding: 3px 10px;
   font-size: 12px;
   color: #FFF;
   width: auto;
   height: auto;
   margin: 0;
   display: inline-block;
-  top: 0;
+  top: 3px;
+  right: -10px;
   position: relative;
   z-index: 1; }
 
@@ -7043,6 +7048,8 @@ body {
 
 .outcome-col {
   background: #e6e6e6; }
+  .outcome-col .outcome-progress-col {
+    margin-top: 23px; }
 
 .report-icon {
   margin-top: 0px; }
@@ -7051,11 +7058,12 @@ body {
   font-size: 12px;
   line-height: 16px;
   color: #808080;
-  margin-bottom: 10px; }
+  margin-bottom: 7px; }
   .outcome-col .report-heading .icon {
-    font-size: 31px;
+    font-size: 33px;
     color: #008091; }
   .outcome-col .report-heading h6 {
+    text-transform: uppercase;
     font-size: 15px;
     color: #666666; }
 .outcome-col .outcome-note {
@@ -7085,11 +7093,12 @@ body {
     font-size: 12px;
     color: #535353;
     line-height: 12px;
-    padding: 10px 15px; }
+    padding: 8px 15px; }
   .map-view-container .map-filter li.list-head {
+    text-transform: uppercase;
     color: #FFF;
     background: #cccccc;
-    padding: 8px 15px;
+    padding: 3px 15px;
     font-size: 15px; }
     .map-view-container .map-filter li.list-head:last-child {
       border: none !important; }
@@ -7193,6 +7202,9 @@ body {
   .input-wrapper .input-qa span.number-txt {
     width: 53%; }
 
+#maternal-health, #child-health {
+  font-size: 10px !important; }
+
 .swiper-tab {
   background: #fff; }
   .swiper-tab .swiper-pagination {
@@ -7225,7 +7237,7 @@ body {
 .swiper-tab-nav .list-inline {
   margin-bottom: 0; }
 
-.swiper-slide {
+.tab-content .swiper-slide {
   padding: 17px 15px; }
 
 .custom-select {
@@ -7289,5 +7301,21 @@ body {
     font-size: 12px; }
   .report-list span.date {
     line-height: 16px; }
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1172px; } }
+.design-test {
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+  position: absolute;
+  background: #FFF;
+  z-index: 99999999;
+  opacity: 0.8;
+  background: url("../images/output.jpg") no-repeat;
+  background-position: center top; }
 
 /*# sourceMappingURL=style.css.map */
