--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -43,20 +43,21 @@
 	font-weight: normal;
 	font-family: $primary-font;
 	text-transform: uppercase;
-	padding: 0px 10px;
-	line-height: 30px;
+	padding: 0px 12px;
+	line-height: 27px;
 	margin-left: -15px;
 }
 .view-on-map{
 	background: #AAAAAA;
-	padding: 0 10px;
+	padding: 3px 10px;
 	font-size: 12px;
 	color: #FFF;
 	width: auto;
 	height: auto;
 	margin: 0;
 	display: inline-block;
-	top: 0;
+	top: 3px;
+	right: -10px;
 	position: relative;
 	z-index: 1;
 }
@@ -65,6 +66,9 @@
 }
 .outcome-col{
 	background: #e6e6e6;
+	.outcome-progress-col{
+		margin-top: 23px;
+	}
 }
 
 .report-icon{
@@ -75,12 +79,13 @@
 		font-size: 12px;
 		line-height: 16px;
 		color: #808080;
-		margin-bottom:10px;
+		margin-bottom:7px;
 		.icon{
-			font-size: 31px;
+			font-size: 33px;
 			color: #008091;
 		}
 		h6{
+			text-transform: uppercase;
 			font-size: 15px;
 			color: #666666;
 		}
@@ -118,12 +123,13 @@
 	    font-size: 12px;
 	    color: #535353;
 	    line-height: 12px;
-	    padding: 10px 15px;
+	    padding: 8px 15px;
 		}
 		li.list-head {
+			text-transform: uppercase;
 	    color: #FFF;
 	    background: #cccccc;
-	    padding: 8px 15px;
+	    padding: 3px 15px;
 	    font-size: 15px;
 	   	&:last-child{
 	   		border: none !important;
@@ -273,4 +279,7 @@
 			width: 53%;
 	  }
 	}
+}
+#maternal-health, #child-health{
+	font-size: 10px !important;
 }
