--- a/public/scss/header.scss
+++ b/public/scss/header.scss
@@ -5,7 +5,9 @@
 	background: $red;
 	.navbar.navbar-red{
 		.navbar-brand{
-			margin-right: 32px;
+			margin-right: 30px;
+			padding-left: 16px;
+    	padding-top: 0px;
 		}
 		.navbar-toggler, .navbar-toggler:focus{
 			border: none;
@@ -47,8 +49,10 @@
 				color: $white;
 				font-size: 1rem;
 				@include media-breakpoint-up(lg) {
-					padding-top: 27px;
-					padding-bottom: 20px;
+					padding-top: 23px;
+			    padding-bottom: 13px;
+			    padding-left: 50px;
+			    padding-right: 57px;
 				}
 			}
 			// dropdown
