--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6813,6 +6813,9 @@ body {
   transition: all 0.5s ease-out;
   color: #333; }
 
+.progress-bar-v {
+  background-image: url("../images/loading-strip-v.png"); }
+
 .progress-bar-h {
   width: 73%;
   float: left;
@@ -6876,7 +6879,8 @@ body {
   -webkit-transform: scaleY(0);
   -ms-transform: scaleY(0);
   -o-transform: scaleY(0);
-  transform: scaleY(0); }
+  transform: scaleY(0);
+  justify-content: center; }
 
 .progress-bar-v .goal {
   height: 30%;
