--- a/public/scss/swiper-tab.scss
+++ b/public/scss/swiper-tab.scss
@@ -42,5 +42,8 @@
 .tab-content{
 	.swiper-slide {
 	    padding: 12px 15px;
+	    .pie-chart .slice:first-child text {
+			    fill: #FFF !important;
+			}
 	}
 } 
