--- a/public/scss/header.scss
+++ b/public/scss/header.scss
@@ -42,6 +42,17 @@
 						position: absolute;
 					}
 				}
+				@include media-breakpoint-down(md) {
+					a{
+						background: #fda69c;
+					}
+				}
+			}
+			&.dropdown .dropdown-menu .dropdown-item:before{
+				display: none;
+			}
+			&.dropdown .dropdown-menu .dropdown-item.active:before{
+				display: block;
 			}
 			a{
 				position: relative;
@@ -53,6 +64,12 @@
 			    padding-bottom: 13px;
 			    padding-left: 50px;
 			    padding-right: 57px;
+				}
+			}
+			@include media-breakpoint-down(md) {
+				.nav-link{
+					padding-left: 10px;
+					padding-right: 10px;
 				}
 			}
 			// dropdown
@@ -69,6 +86,9 @@
 				.dropdown-item:hover, .dropdown-item:focus, .dropdown-item.active, .dropdown-item:active{
 					background: #fda69c;
 				}
+			}
+			.dropdown-toggle:after{
+				display: none;
 			}
 		}
 	}
