--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -124,6 +124,20 @@
 	    color: #535353;
 	    line-height: 12px;
 	    padding: 8px 15px;
+	    position: relative;
+	    text-decoration: none;
+	   	&.active:before{
+	   		display: block;
+				width: 0;
+		    height: 0;
+		    content: "";
+		    position: absolute;
+		    right: 0;
+		    border-top: 15px solid transparent;
+		    border-bottom: 15px solid transparent;
+		    border-right: 15px solid #cccccc;
+		    top: 0;
+	    }
 		}
 		li.list-head {
 			text-transform: uppercase;
