--- a/public/scss/swiper-tab.scss
+++ b/public/scss/swiper-tab.scss
@@ -33,6 +33,7 @@
 .tab-col-subtitle{
 	color: #a0a0a0;
 	font-size: 14px;
+	margin-bottom: 10px;
 }
 
 .swiper-tab-nav .list-inline {
@@ -44,6 +45,9 @@
 	    padding: 12px 15px;
 	    .pie-chart .slice:first-child text {
 			    fill: #FFF !important;
+			}
+			.pie-chart{
+				margin-top: 15px;
 			}
 	}
 } 
