--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7251,7 +7251,19 @@ body {
   text-transform: uppercase;
   text-decoration: none; }
   .swiper-tab-nav li a.active {
-    background: #ffa69c; }
+    background: #ffa69c;
+    position: relative; }
+    .swiper-tab-nav li a.active:before {
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-bottom: 5px solid #ededed;
+      content: "";
+      bottom: 0;
+      left: 50%;
+      margin-left: -3px;
+      position: absolute; }
 .swiper-tab-nav .list-inline-item:not(:last-child) {
   margin: 0px; }
 
