--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7288,6 +7288,11 @@ body {
     fill: #FFF !important; }
   .tab-content .swiper-slide .pie-chart {
     margin-top: 15px; }
+  .tab-content .swiper-slide .area-chart {
+    height: 200px; }
+    @media (min-width: 768px) {
+      .tab-content .swiper-slide .area-chart {
+        width: 87%; } }
 
 .custom-select {
   background-image: url("../images/select-img.png");
