map zoom button transparent, map hover stroke decreased and light border added.

--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -297,3 +297,6 @@
 #maternal-health, #child-health{
 	font-size: 10px !important;
 }
+div#zoomctrl div{
+	background-color: transparent !important;
+}
