--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6833,6 +6833,8 @@ body {
   width: 73%;
   float: left;
   margin-right: 2%; }
+  .progress-bar-h#goal-chart-h-Stunting {
+    display: flex; }
 
 .tgtxt {
   float: left;
@@ -7030,8 +7032,10 @@ body {
   .legend .weight-measured:before {
     background-color: #0c4a60; }
   .legend .imci-counselling:before {
-    background-color: #008091; }
+    background-color: #81ddc6; }
   .legend .supplements-distributed:before {
+    background-color: #008091; }
+  .legend .child-growth:before {
     background-color: #0c4a60; }
 
 .box-heading {
@@ -7201,7 +7205,7 @@ body {
       font-size: 14px; }
     .input-wrapper .input-box.input-reporting div span.no {
       background: #999999; }
-  .input-wrapper .input-training span.number, .input-wrapper .input-qa span.number, .input-wrapper .input-supply-management span.number {
+  .input-wrapper .input-training span.number, .input-wrapper .input-qa span.number, .input-wrapper .input-supply-management span.number, .input-wrapper .input-reporting span.number {
     font-size: 27px;
     font-weight: 300;
     color: #008091;
@@ -7211,9 +7215,9 @@ body {
     max-width: 50px;
     min-width: 50px; }
     @media (min-width: 1200px) {
-      .input-wrapper .input-training span.number, .input-wrapper .input-qa span.number, .input-wrapper .input-supply-management span.number {
+      .input-wrapper .input-training span.number, .input-wrapper .input-qa span.number, .input-wrapper .input-supply-management span.number, .input-wrapper .input-reporting span.number {
         width: 32%; } }
-  .input-wrapper .input-training span.number-txt, .input-wrapper .input-qa span.number-txt, .input-wrapper .input-supply-management span.number-txt {
+  .input-wrapper .input-training span.number-txt, .input-wrapper .input-qa span.number-txt, .input-wrapper .input-supply-management span.number-txt, .input-wrapper .input-reporting span.number-txt {
     display: inline-block;
     width: 60%;
     font-size: 12px;
@@ -7234,6 +7238,9 @@ body {
 
 #maternal-health, #child-health {
   font-size: 10px !important; }
+
+div#zoomctrl div {
+  background-color: transparent !important; }
 
 .swiper-tab {
   background: #fff; }
