--- a/public/scss/progressbar.scss
+++ b/public/scss/progressbar.scss
@@ -18,6 +18,9 @@
   width: 73%;
   float: left;
   margin-right: 2%;
+  &#goal-chart-h-Stunting{
+    display: flex;
+  }
 }
 .tgtxt{
   float: left;
@@ -71,7 +74,7 @@
     width: 90%;
     margin: 0;
     max-width: 100%;
-  } 
+  }
 }
 .progress-bar-v .current{
   width: 100%;
@@ -96,7 +99,7 @@
   -webkit-animation: animationGrowV ease-out .5s;
   -webkit-animation-iteration-count: 1;
   -webkit-transform-origin: 50% 100%;
-  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
+  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/
   -moz-animation: animationGrowV ease-out .5s;
   -moz-animation-iteration-count: 1;
   -moz-transform-origin: 50% 100%;
@@ -164,7 +167,7 @@
   -webkit-animation: animationGrowH ease-out .5s;
   -webkit-animation-iteration-count: 1;
   -webkit-transform-origin: 0% 50%;
-  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
+  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/
   -moz-animation: animationGrowH ease-out .5s;
   -moz-animation-iteration-count: 1;
   -moz-transform-origin: 0% 50%;
